testsuite/tests/rename/should_fail/rnfail026.stderr
rnfail026.hs:16:17: error: [GHC-83865]
    • Expected kind ‘* -> *’,
        but ‘forall a. Eq a => Set a’ has kind ‘*’
    • In the first argument of ‘Monad’, namely
        ‘(forall a. Eq a => Set a)’
      In the instance declaration for ‘Monad (forall a. Eq a => Set a)’

